# mini_SILS_HILS

./: .dockerignore  .gitignore  pyproject.toml  requirements.txt
.github/workflows/: aws-s3-upload.yml  cpp-sils-ci.yml  (+2 more)
common/: README.md
docs/: evidence_governance_phase3.md  key_architecture_files.md  sbom_minimum_policy_phase4.md  tree_mini_sils_hils_poc_full.md
environments/: arduino_hils.json  cpp_sils.json  environment_capability_matrix.yaml  mini_hils.json  python_sils.json
evidence/: evidence_manifest.json
lifecycle/: README.md
mini-sils-poc/: .dockerignore  pyproject.toml
mini-sils-poc/.github/workflows/: python-test.yml
mini-sils-poc/cpp/: CMakeLists.txt
mini-sils-poc/cpp/include/: fan_control.hpp
mini-sils-poc/cpp/scenarios/: run_scenario.cpp
mini-sils-poc/cpp/src/: fan_control.cpp  main.cpp
mini-sils-poc/cpp/tests/: test_fan_control.cpp
mini-sils-poc/docker/: README.md
mini-sils-poc/docs/: ci_evidence.md
mini-sils-poc/docs/specs/: fan_control_sils_spec.md
mini-sils-poc/scenarios/fan_control/: sc_01_traffic_warmup_cooldown.csv
mini-sils-poc/scripts/: run_fan_control_sils.py
mini-sils-poc/src/mini_sils/: fan_control.py  result_writer.py  scenario_runner.py
mini-sils-poc/tests/: test_fan_control.py
requirements/: REQ-FAN-001.md  REQ-FAN-002.md
results/: all_results_summary.json  comparison_summary.json  suite_summary.json  verification_report.md
tools/: check_comparison_evidence.py  check_coverage.py  check_evidence_manifest.py  check_traceability.py  compare_all_results.py  compare_python_cpp_results.py  generate_coverage_matrix.py  generate_evidence_manifest.py  generate_verification_report.py  generate_version_matrix.py  load_scenario_suite.py  run_governance_checks.py  run_suite.py  run_v2_validation.py  validate_traceability_consistency.py
traceability/: coverage_matrix.json  evidence_mapping.json  scenario_traceability.json  version_compatibility_matrix.json
versions/: fan_control_v1.json  fan_control_v2.json
(+85 files in other folders)
